# patwhoami

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
configs/: default_bow.cfg  default_cnn.cfg  default_ensemble.cfg
data/: .gitignore  active_training.corr.csv.dvc  active_training.corr.jsonl.dvc  active_training.jsonl.dvc  irl.jsonl.dvc  irl_pred.jsonl.dvc  test.csv.dvc  test.spacy.dvc  train.csv.dvc  train.spacy.dvc  training.csv.dvc
docs/: ANNOTATION_GUIDELINES.md  RECIPE.md
models/: .gitignore  default_bow.dvc  default_cnn.dvc  xx_cat_pateexx_md-1.0.0.dvc
patwhoami/: evaluate.py  lib.py  main.py  pred.py  prep.py
tests/: test_patwhoami.py
